# MITRotor

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pytest.yml
MITRotor/: Aerodynamics.py  BEM.py  BEMSolver.py  CachedLUT.py  FlorisInterface.py  Geometry.py  Momentum.py  MomentumTheory.py  ReferenceTurbines.py  RotorDefinition.py  TangentialInduction.py  ThrustInduction.py  TipLoss.py  Tiploss.py  Utilities.py  __init__.py
MITRotor/FlorisInterface/: FlorisControl.py  FlorisInterface.py  IEA_15mw_rotor.csv  pitch_15mw.csv  pitch_tsr_ct_15mw.csv  tsr_15mw.csv
MITRotor/PressureSolver/: ADPressureField.py  PressureSolver.py  poisson_pressure_linear.py  poisson_pressure_nonlinear.py
MITRotor/ReferenceTurbines/: IEA-10-198-RWT.yaml  IEA-22-280-RWT.yaml
Torque2024/: BEM_root_finding.py  abstract_BEM_diagram_rotor_distribution.ipynb  abstract_derating_strategies_on_Cp_surface.ipynb  abstract_optimal_over_yaw.ipynb  cache.py  generate_data.ipynb  plot_BEM_AD_equivalency.py  plot_opt_setpoint_vs_yaw.py  plot_pitch_tsr_contour.py  plot_rotor_distribution_illustration.py  plot_wake_strength_vs_derate_trajectory.py  plot_wake_yaw_power_loss.py  shared_generation.py
examples/: MITRotor_quickstart.ipynb  example_000_template.py  example_001_momentum_aligned.py  example_002_blah.py  example_003_iterations.py  example_004_ThrustInduction.py  example_005.5_pitch_tsr.py  example_005_BEM.py  example_006_pitch_tsr.py  example_006_pitch_tsr_RA_vs_annulus.py  example_007_pressure_poisson.py  example_008_modified_unified.py  example_009_nonlinear_pressure.py  example_010_combined_pressure.py  example_01_basic_BEM.py  example_02_rotor_distributions.py  example_03_pitch_tsr_contour.py  example_04_aero.ipynb  example_04_aero_props_yaw_tilt.ipynb  example_04_yaw_tilt_rotor_comparison.py  example_05_3D_stall_delay_correction.py  example_05_LUT_BEM.py  example_05_floris_integration.ipynb  example_05_floris_integration.py  example_06_3D_stall_delay_correction.py  example_06_floris_integration.py  example_07_LUT_timing.py  example_4.5_BEM.py  example_timing.py  example_timing_plots.py  floris_profile_1.py
tests/: test_3D_stall_delay.py  test_bem.py  test_cachedLUT.py  test_floris_interface.py  test_geometry.py  test_momentum.py  test_package.py  test_run_examples.py
