[tool.poetry]
name = "MITRotor"
version = "0.1.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
readme = "README.md"
packages = [{ include = "MITRotor" }, {include = "Torque2024"}]

[tool.poetry.dependencies]
python = ">=3.8, <=3.9"
numpy = ">=1.16.5, <1.23.0"
scipy = ">=1.6, <1.7.3"
unified-momentum-model = {git = "git@github.com:Howland-Lab/Unified-Momentum-Model.git"}
foreach = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^23.9.1" }
ipython = "^8"
jupyter = "^1.0.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
ruff = "^0.1.7"
ipykernel = "^6.25.1"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
matplotlib = "^3.7.3"
polars = "^0.19.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 130

[tool.ruff]
line-length = 130